force-app/main/default/objects/AuditTrailLoginAs__c/AuditTrailLoginAs__c.object-meta.xml
<CustomObject>
    <label>AuditTrailLoginAs</label>
    <nameField>
        <displayFormat>AUD-{00000000}</displayFormat>
        <label>AuditTrailLoginAs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AuditTrailLoginAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>