force-app/main/default/objects/AuditTrailLoginAs__c/fields/Log_Action__c.field-meta.xml
<CustomField>
    <fullName>Log_Action__c</fullName>
    <label>Log Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>