force-app/main/default/objects/AuditTrailLoginAs__c/fields/Log_Delegate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Log_Delegate_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delegated User Contact record</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AuditTrailLoginAs</relationshipLabel>
    <relationshipName>AuditTrailLoginAs</relationshipName>
    <type>Lookup</type>
</CustomField>