force-app/main/default/objects/AuditTrailLoginAs__c/fields/Log_Delegate_User__c.field-meta.xml
<CustomField>
    <fullName>Log_Delegate_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log Delegate User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AuditTrailLoginAs</relationshipName>
    <type>Lookup</type>
</CustomField>