force-app/main/default/objects/AuditTrailLoginAs__c/fields/Log_Section__c.field-meta.xml
<CustomField>
    <fullName>Log_Section__c</fullName>
    <label>Log Section</label>
    <length>80</length>
    <type>Text</type>
</CustomField>