force-app/main/default/objects/AuditTrailLoginAs__c/fields/Log_User__c.field-meta.xml
<CustomField>
    <fullName>Log_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSRUser</relationshipName>
    <type>Lookup</type>
</CustomField>